# personal-ai

./: .gitignore  Makefile  README.md
.github/: FUNDING.yml
backend/: .env.example  LICENSE  Makefile  pyproject.toml
backend/src/agent/: app.py  configuration.py  graph.py  lm_studio_server.py  memory_recollection.py  oss_openai.py  (+7 more)
frontend/: Makefile  package.json  vite.config.ts
frontend/src/: App.tsx
models/: readme.md  set_env.cmd
services/: LICENSE  Makefile  pyproject.toml  requirements.txt
services/src/services/: app.py  chat.py  embeddings.py  healthcheck.py  lifespan.py  lm_studio_load_balancer.py  models.py  registry.py
services/src/services/internal/: action_manager.py  inference.py  loader.py  registry.py
services/src/services/mcp_tools/: file_system.py  mcp_server.py
services/tests/: pytest.ini  test_inference.py  test_loader.py  test_registry.py
services/tests/APIs/: test_chat.py  test_embeddings.py  test_healthcheck.py  test_registry.py
services/tests/integration_tests/: test_lm_studio_load_balancer.py
services/tests/integration_tests/APIs/: test_chat.py  test_embeddings.py  test_healthcheck.py  test_registry.py
services/tests/integration_tests/mcp_tools/: test_mcp_app.py  test_mcp_server.py
services/tests/unit_tests/: test_action_manager.py  test_inference.py  test_lifespan.py  test_loader.py  test_openai_client_integration.py  test_registry.py
services/tests/unit_tests/APIs/: test_chat.py  test_embeddings.py  test_healthcheck.py  test_registry.py
services/tests/unit_tests/mcp_tools/: test_file_system.py  test_mcp_server.py
(+10 files in other folders)
